english version update

--- a/heilkraeuter_en.html
+++ b/heilkraeuter_en.html
@@ -90,17 +90,17 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Heilkräuter in der Leechkirche</h1>
+                <h1>Medicinal herbs in the Leechkirche</h1>
             </header>
 
         
             <div style="text-align:justify;">
-                <p>Wer den Kircheninnenraum aufmerksam betrachtet, kann hoch am Gewölbeansatz verschiedene gotische Pflanzenkapitelle erkennen. Hier wird die Bedeutung der mittelalterlichen Geistlichkeit für Theologie und Mystik dieser Zeit sichtbar.</p>
-                <p>Der Blattschmuck an den Kapitellen hat seinen Vorläufer in der antiken korinthischen Säule. Die Verzierung der Säule durch die Ornamentik des Akanthus hob sie von den zwei anderen maßgeblichen Stilen der dorischen und ionischen Säule ab. Während Karl der Große in seiner Pfalzkapelle noch das klassisch korinthische Motiv verbauen ließ, erfuhr die Ornamentik schon in karolingischer Zeit tiefgreifende Abwandlungen. Aber auch die deutschen Herrscher des 12. Jahrhunderts verwendeten noch das Akanthusblatt als Herrschaftssymbol.</p>
-                <p>Im 13. Jahrhundert  wurde schließlich der Einsatz der Ornamentik bei Wahrung der architektonischen Grundform immer mehr von der Auflösung dieser Urform abgelöst. Im Sinn der Kirche als Symbol für den Himmel erfüllen die Blatt- und Blütenkapitelle die Rolle der blühenden Wiesen des Paradieses. Als prachtvollste Beispiele können die Kathedrale von Reims, der Mainzer oder Naumburger Dom genannt werden.</p>
-                <p>Neben der symbolischen Bedeutung lässt sich an der Pflanzenornamentik aber auch die Entstehung eines neuen Weltbildes ablesen, in dem die Natur zum Gegenstand wissenschaftlicher Forschung wurde. Die Gelehrten Albert Magnus und sein Schüler Thomas von Aquin erschlossen die Schriften des Aristoteles, woraus sich die Verwissenschaftlichung und Systematisierung der Natur entwickelte. Jede Pflanze erhält nun ihren eigenen Wert und wird um ihrer selbst willen darstellungswürdig. Dies erklärt den Reichtum an Formen und die Natürlichkeit der Pflanzendarstellungen.</p>
-                <p>In ebenjener Zeit entstanden auch die Pflanzenornamente der Grazer Leechkirche (1283-1293). Damit dürften sie die frühesten realistischen Pflanzendarstellungen dieser Art in Österreich sein. Als Orientierung dienten die französischen Vorbilder der 1250er Jahre, die durch deutsche Bildhauer vermittelt wurden. Vermutlich spielte dabei auch der Deutsche Ritterorden eine Rolle, da deren Kirche St. Elisabeth in Marburg an der Lahn auch ähnliche Blattmotive auszeichnet.
-                    Außerdem zeigt sich in der Verwendung der Pflanzen ein Zusammenhang mit der Hospitalstradition und dem damit verbundenen heilkundlichen Wissen des Ordens. Somit könnte das Wissen der Ordensleute in den Kapitellschmuck ihrer Kirchen Eingang gefunden haben und auch bei der Auswahl der Pflanzen bestimmend gewesen sein.</p>
+              <p>If you look carefully inside the church, you can recognise various Gothic plant capitals high up on the base of the vault. Here, the importance of the medieval clergy for the theology and mysticism of the time becomes visible.</p>
+              <p>The leaf decoration on the capitals has its predecessor in the ancient Corinthian column. The decoration of the column with acanthus ornamentation set it apart from the two other main styles of the Doric and Ionic columns. While Charlemagne still had the classical Corinthian motif used in his Palatine Chapel, the ornamentation underwent profound changes as early as the Carolingian period. But even the German rulers of the 12th century still used the acanthus leaf as a symbol of power.</p>
+              <p>In the 13th century, the use of ornamentation while maintaining the basic architectural form was increasingly replaced by the dissolution of this original form. In the sense of the church as a symbol of heaven, the leaf and flower capitals fulfil the role of the blossoming meadows of paradise. The most magnificent examples include Reims Cathedral, Mainz Cathedral and Naumburg Cathedral.</p>
+              <p>In addition to its symbolic significance, plant ornamentation also reflects the emergence of a new world view in which nature became the subject of scientific research. The scholars Albert Magnus and his pupil Thomas Aquinas made Aristotle's writings accessible, which led to the scientification and systematisation of nature. Each plant was now given its own value and became worthy of representation for its own sake. This explains the wealth of forms and the naturalness of the plant depictions.</p>
+              <p>The plant ornaments on the Leech Church in Graz (1283-1293) were also created at the same time. They are therefore probably the earliest realistic depictions of plants of this kind in Austria. The French models of the 1250s, which were conveyed by German sculptors, served as orientation. The Teutonic Knights probably also played a role here, as their church of St Elisabeth in Marburg an der Lahn also features similar leaf motifs. The use of plants also shows a connection with the hospital tradition and the associated medical knowledge of the order. The knowledge of the monks could therefore have found its way into the capital decoration of their churches and also determined the choice of plants.</p>
+              <p>Translated with DeepL.</p>
 
                 <div class="container">
                   <div class="row">
@@ -110,61 +110,61 @@
                           <div class="carousel-item active">
                             <img src="images/Diestel.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Distel – Onopordum acanthium</h5>
+                              <h5>Thistle – Onopordum acanthium</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Weissdorn.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Weißdorn – Crataegus monogyna</h5>
+                              <h5>Hawthorn – Crataegus monogyna</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Lilie.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Lilie – Lilium candidum</h5>
+                              <h5>Lily – Lilium candidum</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Efeu.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Efeu – Hedera helix</h5>
+                              <h5>Ivy – Hedera helix</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Klee.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Klee – Trifolium repens, Trifolium pratense</h5>
+                              <h5>Clover – Trifolium repens, Trifolium pratense</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Bilsenkraut.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Bilsenkraut – Hyoscyamus niger</h5>
+                              <h5>Henbane – Hyoscyamus niger</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Feige.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Feige – Ficus carica</h5>
+                              <h5>Fig – Ficus carica</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Erdbeere.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Erdbeere – Fragaria vesca</h5>
+                              <h5>Strawberry – Fragaria vesca</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Malve.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Malve – Malva sylvestris</h5>
+                              <h5>Mallow – Malva sylvestris</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/Eiche.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Eiche – Quercus robur</h5>
+                              <h5>Oak – Quercus robur</h5>
                             </div>
                           </div>
                         </div>
@@ -172,29 +172,29 @@
                     </div>
                     </div>
 
-                <h2>Folgende Heilpflanzen sind in der Kirche zu finden:</h2>
-                <p>Distel – Onopordum acanthium<br>Heilwirkung: verdauungsfördernd</p>
-                <p>Weißdorn – Crataegus monogyna<br>
-                  Heilwirkung: bei nervösen Herzbeschwerden Unterstützung der Herz-Kreislauffunktion</p>
-                <p>Lilie – Lilium candidum<br>Narzisse – Narcissus poeticus<br>
-                  Heilwirkung: wundheilungsfördernd, entzündungshemmend/antibakteriell</p>
-                <p>Efeu – Hedera helix<br>
-                  Heilwirkung: bei Husten und Katarrhen der Atemwege, auswurffördernd, krampflösend</p>
-                <p>Klee – Trifolium repens, Trifolium pratense<br>
-                  Leberblümchen – Hepatica nobilis<br>
-                  Heilwirkung: bei Wechseljahresbeschwerden/hautreizend, nierenreizend</p>
-                <p>Bilsenkraut – Hyoscyamus niger<br>
-                  Ehrenpreis - Veronica officinalis/chamaedris<br>
-                  Heilwirkung: giftig! krampflösend/auswurffördernd, bei Verdauungsstörungen und Leberkrankungen; zur Wundbehandlung</p>
-                <p>Feige – Ficus carica<br>
-                  Heilwirkung: verdauungsfördernd</p>
-                <p>Erdbeere – Fragaria vesca<br>
-                  Hopfen – Humulus lupulus<br>
-                  Heilwirkung: bei Durchfällen, als Schwarztee-Ersatz/beruhigend, verdauungsfördernd, antibakteriell</p>
-                <p>Malve – Malva sylvestris<br>
-                  Heilwirkung: bei trockenem Reizhusten, Hals- und Rachenentzündungen</p>
-                <p>Eiche – Quercus robur<br>
-                  Heilwirkung: entzündungshemmend, antibakteriell, pilzwachstumshemmend</p>
+                <h2>The following medicinal plants can be found in the church:</h2>
+                <p>Thistle - Onopordum acanthium<br>Healing effect: helps digestion</p>
+                <p>Hawthorn - Crataegus monogyna<br>
+                  Healing effect: for nervous heart complaints Support of the cardiovascular function</p>
+                <p>Lily - Lilium candidum<br>Daffodil - Narcissus poeticus<br>
+                  Healing effect: promotes wound healing, anti-inflammatory/antibacterial</p>
+                <p>Ivy - Hedera helix<br>
+                  Healing effect: for coughs and catarrhs of the respiratory tract, expectorant, antispasmodic</p>
+                <p>Clover – Trifolium repens, Trifolium pratense<br>
+                  liverleaf – Hepatica nobilis<br>
+                  Healing effect: for menopausal complaints/irritating to the skin, irritating to the kidneys</p>
+                <p>Henbane – Hyoscyamus niger<br>
+                  Germander Speedwell - Veronica officinalis/chamaedris<br>
+                  Medicinal effect: poisonous! antispasmodic/expectorant, for digestive disorders and liver diseases; for treating wounds</p>
+                <p>Fig – Ficus carica<br>
+                  Healing effect: digestive</p>
+                <p>Strawberry – Fragaria vesca<br>
+                  Hops – Humulus lupulus<br>
+                  Healing effect: for diarrhoea, as a black tea substitute/calming, digestive, antibacterial</p>
+                <p>Mallow – Malva sylvestris<br>
+                  Healing effect: for dry irritating coughs, sore throats and pharyngitis</p>
+                <p>Oak – Quercus robur<br>
+                  Healing effect: anti-inflammatory, antibacterial, inhibits fungal growth</p>
             </div>
         
     </div>
