--- a/index_en.html
+++ b/index_en.html
@@ -91,35 +91,20 @@
             <div id="content" class="row">
               <header>
                 <h1>Welcome to Leechkirche in Graz</h1>
-                <p>A project zur digitalen Bewahrung und Präsentation eines Kulturguts</p>
+                <p>A project for the digital preservation and presentation of a cultural asset.</p>
             </header>
         
             <div style="text-align:justify;">
                 <p>
-                    Dieses Projekt ist als Abschlussarbeit im Rahmen der universitären Veranstaltung 'Digital Museology', betreut von Chiara Zuanni, entstanden. Es widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
-                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
-                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
-                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
-                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
+                  This project was developed as a final project as part of the university course ‘Digital Museology’, supervised by Chiara Zuanni. It is dedicated to the digital recording and modelling of the Leechkirche in Graz. Our aim is to use advanced 3D modelling techniques to create a detailed and interactive experience that makes the rich history and architecture of this important cultural site accessible. We strive to create a comprehensive digital archive that can be used for educational purposes as well as to promote cultural heritage.
                 </p>
                 <p>
-                    Die Leechkirche, im Herzen von Graz gelegen, ist ein architektonisches Meisterwerk mit einer 
-                    reichen Geschichte, die bis ins 14. Jahrhundert zurückreicht. Ursprünglich als Teil eines 
-                    Klosters erbaut, spiegelt sie verschiedene Baustile von der Gotik bis zur Neuzeit wider. 
-                    Ihre bedeutende Rolle in der lokalen Gemeinschaft und ihre künstlerischen Merkmale, wie die 
-                    beeindruckenden Fresken und Schnitzwerke, machen sie zu einem wichtigen Zeugnis des kulturellen 
-                    und religiösen Lebens in der Steiermark.
+                  The Leechkirche, located in the centre of Graz, is an architectural masterpiece with a rich history dating back to the 14th century. Originally built as part of a monastery, it reflects various architectural styles from Gothic to modern times. Its important role in the local community and its artistic features, such as the impressive frescoes and carvings, make it an important testimony to cultural and religious life in Styria.
                 </p>
                 <p>
-                  Besonders bemerkenswert ist die Darstellung von medizinischen Kräutern innerhalb der Kirche, 
-                  die auf die lange Tradition der Kräutermedizin in der Region hinweist. Diese Kräuter waren 
-                  nicht nur für ihre heilenden Eigenschaften bekannt, sondern wurden auch symbolisch in der 
-                  Kunst und Architektur der Kirche integriert, was ihre Bedeutung in der damaligen Gesellschaft 
-                  unterstreicht. Die detaillierte Darstellung dieser Kräuter in Fresken und Schnitzereien bietet 
-                  einen einzigartigen Einblick in die mittelalterliche Kräuterheilkunde und die Verbindung zwischen 
-                  Religion und Medizin.
+                  Particularly noteworthy is the depiction of medicinal herbs within the church, which points to the long tradition of herbal medicine in the region. These herbs were not only known for their healing properties, but were also symbolically integrated into the church's art and architecture of the church, emphasising their importance in the society of the time. society at the time. The detailed depiction of these herbs in frescoes and carvings provides a unique insight into medieval herbal medicine and the connection between religion and medicine. religion and medicine.
               </p>
-              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
+              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generated with ChatGPT</a></p>
             </div>
         
     </div>
@@ -129,9 +114,9 @@
         <div class="card h-100">
           <img src="images/kirche_1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Geschichte</h5>
-            <p class="card-text">Die Leechkirche ist nicht nur ein historisches Bauwerk, sondern auch ein wichtiger Teil des kulturellen Erbes von Graz.</p>
-            <a href="geschichte.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
+            <h5 class="card-title">History</h5>
+            <p class="card-text">The Leechkirche is not only a historic building, but also an important part of Graz's cultural heritage.</p>
+            <a href="geschichte_en.html" class="btn btn-secondary stretched-link">Read more</a>
           </div>
         </div>
       </div>
@@ -139,9 +124,9 @@
         <div class="card h-100">
           <img src="images/innen.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Architektur</h5>
-            <p class="card-text">Die Leechkirche ist ein hervorragendes Beispiel für die Synthese von Romanik und Gotik in der Sakralarchitektur.</p>
-            <a href="architektur.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
+            <h5 class="card-title">Architecture</h5>
+            <p class="card-text">The Leech Church is an outstanding example of the synthesis of Romanesque and Gothic styles in religious architecture.</p>
+            <a href="architektur_en.html" class="btn btn-secondary stretched-link">Read more</a>
           </div>
         </div>
       </div>
@@ -149,9 +134,9 @@
         <div class="card h-100">
           <img src="images/kraeuter.webp" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Heilkräuter</h5>
-            <p class="card-text">Die Leechkirche besitzt am Gewölbeansatz gotische Pflanzenkapitelle, die die mittelalterliche Geistlichkeit widerspiegeln.</p>
-            <a href="heilkraeuter.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
+            <h5 class="card-title">Medical Herbs</h5>
+            <p class="card-text">The Leech Church has Gothic plant capitals at the base of the vault, reflecting the medieval clergy.</p>
+            <a href="heilkraeuter_en.html" class="btn btn-secondary stretched-link">Read more</a>
           </div>
         </div>
       </div>
