--- a/kontakt.html
+++ b/kontakt.html
@@ -100,12 +100,16 @@
           <h2>Institutsadresse</h2>
           <address>
               Universität Graz<br>
-              Zentrum für Informationsmodellierung (ZIM)<br>
-              Elisabethstraße 59, 8010 Graz<br>
+              Institut für Digitale Geisteswissenschaften<br>
+              Elisabethstraße 59/III, 8010 Graz<br>
               Österreich
           </address>
           
           <h2>Ansprechpartner:innen</h2>
+                <div class="contact-person">
+                  <h4>Melanie Frauendorfer</h4>
+                  <p>E-Mail: <a href="mailto:melanie.frauendorfer@edu.uni-graz.at">melanie.frauendorfer@edu.uni-graz.at</a></p>
+                </div>
                 <div class="contact-person">
                     <h4>Andreas Atzmüller</h4>
                     <p>E-Mail: <a href="mailto:andreas.atzmueller@edu.uni-graz.at">andreas.atzmueller@edu.uni-graz.at</a></p>
@@ -113,7 +117,7 @@
                 <div class="contact-person">
                   <h4>Theresa Csuk</h4>
                   <p>E-Mail: <a href="mailto:theresa.csuk@edu.uni-graz.at">theresa.csuk@edu.uni-graz.at</a></p>
-              </div>
+                </div>
                 <div class="contact-person">
                     <h4>Christina Dittmann</h4>
                     <p>E-Mail: <a href="mailto:christina.dittmann@edu.uni-graz.at">christina.dittmann@edu.uni-graz.at</a></p>
