--- a/memory_en.html
+++ b/memory_en.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Memory zu den Heilpflanzen der Leechkirche</h1>
+                <h1>Memory of the medicinal plants of the Leech Church</h1>
             </header>
         
               <div class="memory-game">
