--- a/viewer_aussenbereich.html
+++ b/viewer_aussenbereich.html
@@ -61,7 +61,6 @@
                   Unterhaltung
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="musik.html">KI-Musik</a></li>
                   <li><a class="dropdown-item" href="memory.html">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
@@ -84,6 +83,11 @@
               </li>
             </ul>
           </div>
+          <div class="d-flex ms-auto align-items-center" style="gap: 4px;">
+            <a href="viewer_aussenbereich.html" class="nav-link p-0" style="font-size: 15px; color: black;">DE</a>
+            <span style="font-size: 15px;">|</span>
+            <a href="viewer_aussenbereich_en.html" class="nav-link p-0" style="font-size: 15px; color: black;">EN</a>
+        </div>
         </div>
       </nav>
 
