--- a/heilkraeuter.html
+++ b/heilkraeuter.html
@@ -102,71 +102,79 @@
                 <p>In ebenjener Zeit entstanden auch die Pflanzenornamente der Grazer Leechkirche (1283-1293). Damit dürften sie die frühesten realistischen Pflanzendarstellungen dieser Art in Österreich sein. Als Orientierung dienten die französischen Vorbilder der 1250er Jahre, die durch deutsche Bildhauer vermittelt wurden. Vermutlich spielte dabei auch der Deutsche Ritterorden eine Rolle, da deren Kirche St. Elisabeth in Marburg an der Lahn auch ähnliche Blattmotive auszeichnet.
                     Außerdem zeigt sich in der Verwendung der Pflanzen ein Zusammenhang mit der Hospitalstradition und dem damit verbundenen heilkundlichen Wissen des Ordens. Somit könnte das Wissen der Ordensleute in den Kapitellschmuck ihrer Kirchen Eingang gefunden haben und auch bei der Auswahl der Pflanzen bestimmend gewesen sein.</p>
 
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-4">
-                      <div id="carouselExampleCaptions" class="carousel-dark slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="images/Diestel.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption bg-custom" style="position: static;">
-                              <h5>Distel – Onopordum acanthium</h5>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <div id="carousel_herbs" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="images/Diestel.jpg" class="d-block w-100" alt="Distel">
+                              <div class="carousel-caption bg-custom" style="position: static;">
+                                <h5>Distel – Onopordum acanthium</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Weissdorn.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Weissdorn.jpg" class="d-block w-100" alt="Weißdorn">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Weißdorn – Crataegus monogyna</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Lilie.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Lilie.jpg" class="d-block w-100" alt="Lilie">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Lilie – Lilium candidum</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Efeu.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Efeu.jpg" class="d-block w-100" alt="...Efeu">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Efeu – Hedera helix</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Klee.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Klee.jpg" class="d-block w-100" alt="Klee">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Klee – Trifolium repens, Trifolium pratense</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Bilsenkraut.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Bilsenkraut.jpg" class="d-block w-100" alt="Bilsenkraut">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Bilsenkraut – Hyoscyamus niger</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Feige.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Feige.jpg" class="d-block w-100" alt="Feige">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Feige – Ficus carica</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Erdbeere.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Erdbeere.jpg" class="d-block w-100" alt="Erdbeere">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Erdbeere – Fragaria vesca</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Malve.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Malve.jpg" class="d-block w-100" alt="Malve">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Malve – Malva sylvestris</h5>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/Eiche.jpg" class="d-block w-100" alt="...">
+                            <img src="images/Eiche.jpg" class="d-block w-100" alt="Eiche">
                             <div class="carousel-caption bg-custom" style="position: static;">
                               <h5>Eiche – Quercus robur</h5>
                             </div>
                           </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#carousel_herbs" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel_herbs" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
                         </div>
                       </div>
                     </div>
