--- a/heilkraeuter_en.html
+++ b/heilkraeuter_en.html
@@ -104,8 +104,8 @@
 
                 <div class="container">
                   <div class="row">
-                    <div class="col-md-4">
-                      <div id="carouselExampleCaptions" class="carousel-dark slide" data-bs-ride="carousel">
+                    <div class="col-md-4" >
+                      <div id="carousel_herbs" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img src="images/Diestel.jpg" class="d-block w-100" alt="...">
@@ -167,10 +167,18 @@
                               <h5>Oak – Quercus robur</h5>
                             </div>
                           </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#carousel_herbs" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#carousel_herbs" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                          </button>
                         </div>
                       </div>
                     </div>
-                    </div>
+                  </div>
 
                 <h2>The following medicinal plants can be found in the church:</h2>
                 <p>Thistle - Onopordum acanthium<br>Healing effect: helps digestion</p>
