--- a/Leechkirche_altar.html
+++ b/Leechkirche_altar.html
@@ -116,10 +116,10 @@
      
          presenter.setScene({
              meshes: {
-                 "mesh_1" : { url: "models/new_new_altar.ply"}
+                 "mesh_1" : { url: "models/altar_blender.nxz"}
              },
              modelInstances : {
-                 "model_1" : { mesh : "mesh_1" }
+                 "model_1" : { mesh : "mesh_1"}
              },
              trackball: { 
                  type : TurnTableTrackball,
