--- a/Leechkirche_altar_en.html
+++ b/Leechkirche_altar_en.html
@@ -115,7 +115,7 @@
      
          presenter.setScene({
              meshes: {
-                 "mesh_1" : { url: "models/new_new_altar.ply"}
+                 "mesh_1" : { url: "models/Leechkirche_altar.nxz"}
              },
              modelInstances : {
                  "model_1" : { mesh : "mesh_1" }
