--- a/monument.html
+++ b/monument.html
@@ -116,7 +116,7 @@
      
          presenter.setScene({
              meshes: {
-                 "mesh_1" : { url: "models/monument.nxz" }
+                 "mesh_1" : { url: "models/1monument.nxz"}
              },
              modelInstances : {
                  "model_1" : { mesh : "mesh_1" }
